fix body overflow

--- a/public/css/translation-component.css
+++ b/public/css/translation-component.css
@@ -1,3 +1,7 @@
+html {
+	overflow-x: hidden;
+}
+
 .core .o-share__action--share {
 	display: block;
 }
